--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <h4>Aswin Anil</h4>
               <p><em></em></p>
               <ul>
-                <li>Kallumpuram Veed kalanjoor o p , pathanamthitta</li>
+                <li>Kallumpuram Veed kalanjoor, kalanjoor P.O , pathanamthitta</li>
                 <li>(+91) 9072780475</li>
                 <li>aswinanil536@gmail.com</li>
               </ul>
